@@ -4,6 +4,9 @@ Changelog
 1.0b6 - Unreleased
 ------------------
 
+* Handle edge cases like invalid range queries by quoting
+  [tesdal]
+
 * Parse and quote the query to filter invalid query syntax.
   [tesdal]
 
